<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.footballapp.captainandroid.footballapp.pkgGUI.ProfileActivity"
    style="@style/background">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:layout_marginBottom="38dp"
        android:layout_marginLeft="56dp"
        android:onClick="onBtnSave"
        android:text="@string/Save"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/buttons"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbStriker"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="119dp"
        android:layout_height="51dp"
        android:layout_marginBottom="38dp"
        android:onClick="onBtnReset"
        android:text="@string/Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/buttons"
        android:layout_marginRight="56dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbStriker"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/cbGoalkeeper"
        android:layout_width="247dp"
        android:layout_height="60dp"
        android:text="@string/Goalkeeper"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cbDefender"
        app:layout_constraintVertical_bias="0.936"
        style="@style/textViews"/>

    <CheckBox
        android:id="@+id/cbDefender"
        android:layout_width="247dp"
        android:layout_height="60dp"
        android:text="@string/Defender"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/cbMidfielder"
        style="@style/textViews"/>

    <CheckBox
        android:id="@+id/cbMidfielder"
        android:layout_width="247dp"
        android:layout_height="60dp"
        android:text="@string/Midfielder"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/cbStriker"
        style="@style/textViews"/>

    <CheckBox
        android:id="@+id/cbStriker"
        android:layout_width="247dp"
        android:layout_height="60dp"
        android:text="@string/Striker"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="183dp"
        style="@style/textViews"/>


</android.support.constraint.ConstraintLayout>
