<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.footballapp.captainandroid.footballapp.pkgGUI.LoginActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onBtnLogin"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="146dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="89dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/User"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txtUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="89dp"
        android:layout_height="54dp"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/Password"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/txtPassword" />

</android.support.constraint.ConstraintLayout>
